--- a/css/webforms.css
+++ b/css/webforms.css
@@ -2,11 +2,39 @@
 /* http://webdesigntutsplus.s3.amazonaws.com/tuts/319_bootstrap_pills_tabs/Tabs-Pills-BEGIN/navbar-examples.html */
 body {
   padding-top: 60px;
-  padding-bottom: 40px;
-  }
+  padding-bottom: 40px; 
+}
+
 /* Remove top padding when top navbar goes static in narrow viewports */
 @media (max-width: 979px) {
   body {
     padding-top: 0;
   }
 }
+
+.navbar-inverse .brand, 
+.navbar-inverse .nav > li > a,
+.navbar-inverse {
+    color: #CCCCCC;
+}
+
+.navbar-inverse .navbar-inner {
+    background: #39275B;
+    border-color: #CCCCCC;
+}
+
+.navbar-inverse .nav .active > a {
+    background: #39275B;
+}
+
+.navbar .nav > .active > a, 
+.navbar .nav > .active > a:hover, 
+.navbar .nav > .active > a:focus {
+    color: #EEEEEE;
+    background: #30275B;
+    text-decoration: none;
+    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75);
+    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75;
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75);
+}
+
