--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -1,8 +1,6 @@
 $uw-purple: #39275B;
 
 
-/* Add top padding for navbar-top-fixed */
-/* http://webdesigntutsplus.s3.amazonaws.com/tuts/319_bootstrap_pills_tabs/Tabs-Pills-BEGIN/navbar-examples.html */
 body {
   padding-top: 60px;
   padding-bottom: 40px; 
@@ -37,7 +35,14 @@ body {
     background: #30275B;
     text-decoration: none;
     -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75);
-    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75;
+    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75);
     box-shadow: inset 0 3px 8px rgba(0, 0, 0, .75);
 }
 
+/* alerts 
+----------------------------------- */
+
+#who-are-you-error,
+#ticket-creation-success {
+    display: none;
+}
