--- a/css/webforms.css
+++ b/css/webforms.css
@@ -7,29 +7,55 @@ body {
   body {
     padding-top: 0; } }
 .navbar-inverse .brand,
-.navbar-inverse .nav > li > a,
-.navbar-inverse {
+.navbar-inverse .nav > li > a {
   color: #CCCCCC; }
-
 .navbar-inverse .navbar-inner {
   background: #39275b;
   border-color: #CCCCCC; }
-
 .navbar-inverse .nav .active > a {
   background: #39275b; }
 
-.navbar .nav > .active > a,
-.navbar .nav > .active > a:hover,
-.navbar .nav > .active > a:focus {
+.navbar .nav > .active > a, .navbar .nav > .active:hover, .navbar .nav > .active:focus {
   color: #EEEEEE;
-  background: #30275B;
+  background: #442f6d;
   text-decoration: none;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.75);
   box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.75); }
+
+.nav-pills .active a {
+  background-color: #39275b; }
+  .nav-pills .active a :hover {
+    background-color: #6646a2; }
 
 /* alerts 
 ----------------------------------- */
 #who-are-you-error,
 #ticket-creation-success {
   display: none; }
+
+/* index page 
+----------------------------------- */
+#index-page {
+  /* Custom container */
+  /* Main marketing message and sign up button */
+  /* Supporting marketing content */ }
+  #index-page .container-narrow {
+    margin: 0 auto;
+    max-width: 700px; }
+    #index-page .container-narrow > hr {
+      margin: 30px 0; }
+  #index-page .jumbotron {
+    margin: 60px 0;
+    text-align: center; }
+    #index-page .jumbotron h1 {
+      font-size: 5em;
+      line-height: 1;
+      color: #39275b; }
+    #index-page .jumbotron .btn {
+      font-size: 1.5em;
+      padding: 14px 24px; }
+  #index-page .marketing {
+    margin: 60px 0; }
+    #index-page .marketing p + h4 {
+      margin-top: 28px; }
