--- a/css/webforms.css
+++ b/css/webforms.css
@@ -23,11 +23,6 @@ body {
   -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.75);
   box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.75); }
 
-.nav-pills .active a {
-  background-color: #39275b; }
-  .nav-pills .active a :hover {
-    background-color: #6646a2; }
-
 /* alerts 
 ----------------------------------- */
 #who-are-you-error,
@@ -39,7 +34,15 @@ body {
 #index-page {
   /* Custom container */
   /* Main marketing message and sign up button */
-  /* Supporting marketing content */ }
+  /* Supporting marketing content */
+  /* .nav-pills {
+      .active a {
+          background-color: $uw-purple;
+          :hover {
+              background-color: lighten($uw-purple, 20%);
+          };
+      }
+  } */ }
   #index-page .container-narrow {
     margin: 0 auto;
     max-width: 700px; }
