playing with ticket creation
test url for ajax ticket creation, needs redoing since refactor;
currently not working; error message when ticket creation fails

--- a/css/webforms.css
+++ b/css/webforms.css
@@ -26,7 +26,8 @@ body {
 /* alerts 
 ----------------------------------- */
 #who-are-you-error,
-#ticket-creation-success {
+#ticket-creation-success,
+#ticket-creation-error {
   display: none; }
 
 /* index page 
