--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -48,7 +48,8 @@ body {
 ----------------------------------- */
 
 #who-are-you-error,
-#ticket-creation-success {
+#ticket-creation-success,
+#ticket-creation-error {
     display: none;
 }
 
