--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -75,6 +75,15 @@ body {
     display: none;
 }
 
+#another-request {
+    display:none;
+}
+
+#ticket-number {
+    display: none;
+}
+
+
 /* index page 
 ----------------------------------- */
 
