work on nebula form
this is ending up as static html manipulated by jquery, not the best
solutio, but the best at this point given the time frame

--- a/css/webforms.css
+++ b/css/webforms.css
@@ -51,6 +51,12 @@ body {
 #ticket-number {
   display: none; }
 
+fieldset {
+  margin-bottom: 2em; }
+
+#authorizing-supervisor {
+  display: none; }
+
 /* index page 
 ----------------------------------- */
 #index-page {
