--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -83,6 +83,14 @@ body {
     display: none;
 }
 
+fieldset {
+    margin-bottom: 2em;
+}
+
+#authorizing-supervisor {
+    display: none;
+}
+
 
 /* index page 
 ----------------------------------- */
