--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -87,7 +87,8 @@ fieldset {
     margin-bottom: 2em;
 }
 
-#authorizing-supervisor {
+#authorizing-supervisor,
+#change-permissions {
     display: none;
 }
 
