more work on nebula form; possible use of require js
but require won't be finished today

--- a/css/webforms.css
+++ b/css/webforms.css
@@ -54,6 +54,8 @@ body {
 fieldset {
   margin-bottom: 2em; }
 
+#github-notice,
+#budget-fieldset,
 #authorizing-supervisor,
 #change-permissions {
   display: none; }
