--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -87,6 +87,8 @@ fieldset {
     margin-bottom: 2em;
 }
 
+#github-notice,
+#budget-fieldset,
 #authorizing-supervisor,
 #change-permissions {
     display: none;
