move off php for now and some etc. below
works with non-test getuser request on rtdev; other tweaks for the tsm
form running

--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -87,10 +87,12 @@ fieldset {
     margin-bottom: 2em;
 }
 
+#form-start-error,
 #github-notice,
 #budget-fieldset,
 #authorizing-supervisor,
-#change-permissions {
+#change-permissions,
+#computers-remove {
     display: none;
 }
 
