--- a/css/webforms.css
+++ b/css/webforms.css
@@ -54,10 +54,12 @@ body {
 fieldset {
   margin-bottom: 2em; }
 
+#form-start-error,
 #github-notice,
 #budget-fieldset,
 #authorizing-supervisor,
-#change-permissions {
+#change-permissions,
+#computers-remove {
   display: none; }
 
 /* index page 
