adjusting size, placement of thank you

--- a/css/webforms.css
+++ b/css/webforms.css
@@ -54,6 +54,8 @@ body {
 fieldset {
   margin-bottom: 2em; }
 
+#loading-notice,
+#help-text-toggle,
 #requestor-fieldset,
 #form-addendum,
 #dev-mode-notice,
