--- a/css/webforms.scss
+++ b/css/webforms.scss
@@ -87,6 +87,8 @@ fieldset {
     margin-bottom: 2em;
 }
 
+#loading-notice,
+#help-text-toggle,
 #requestor-fieldset,
 #form-addendum,
 #dev-mode-notice,
